--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   </head>
   <body>
     <h1>Test</h1>
-    <div class="projectile">
-      <h1>ball</h1>
+    <div class="hand">
+      <ul>
+        <li class="projectile">ball</li>
+      </ul>
     </div>
+    <!-- <div class="projectile">
+      <h1>ball</h1>
+    </div> -->
   </body>
 </html>
