add functions for collision detection

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <li class="projectile">ball</li>
       </ul>
     </div>
-    <!-- <div class="projectile">
-      <h1>ball</h1>
-    </div> -->
+    <div class="target">
+      <h1>hit me</h1>
+    </div>
   </body>
 </html>
