add arrowkey movement

--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <title>Neon Wizard</title>
   </head>
   <body>
-    <h1>Test</h1>
-    <div class="hand">
-      <ul>
-        <li class="projectile">ball</li>
-      </ul>
-    </div>
+    <h1 id="test">Test</h1>
+    <div class="wrapper" id="wrapper">
+      <div class="hand" id="hand">
+        <ul>
+          <li class="projectile">ball</li>
+        </ul>
+      </div>
+  </div>
     <div class="target">
       <h1>hit me</h1>
     </div>
+
   </body>
 </html>
