fix bounding box and remove elements by id on click

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper" id="wrapper">
       <div class="hand" id="hand">
         <ul>
-          <li class="projectile">ball</li>
+          <li class="projectile" id="0">ball</li>
         </ul>
       </div>
   </div>
