--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/magic.css">
     <link rel="stylesheet" href="css/output.css">
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
@@ -15,12 +16,12 @@
     <div class="wrapper" id="wrapper">
       <div class="hand" id="hand">
         <ul>
-          <li class="projectile" id="0">ball</li>
+          <li class="projectile" id="0"><img src="img/fireball.png" alt=""></li>
         </ul>
       </div>
   </div>
-    <div class="target">
-      <h1>hit me</h1>
+    <div class="targetMove" id="target">
+      <img src="img/dude.png" alt="">
     </div>
 
   </body>
