add logic for thrower position

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <div class="targetMove" id="target">
       <img src="img/dude.png" alt="">
     </div>
+    <div class="thrower">
+      <ul>
+
+      </ul>
+
+    </div>
 
   </body>
 </html>
