add animated robots and explosion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
       </div>
   </div>
     <div class="targetMove" id="target">
-      <img src="img/dude.png" alt="">
+      <img src="img/body.png" alt="">
+      <img id="leftarm" src="img/straightArm.png" alt="">
+      <img id="rightarm" src="img/straightArm.png"alt="">
+      <img id="wheel" src="img/wheel.png"alt="">
+
+    </div>
+    <div class="targetMove" id="target2">
+      <img src="img/pinkMan.png" alt="">
+      <img id="leftarm2" src="img/pinkArm.png" alt="">
+      <img id="rightarm2" src="img/pinkArm.png"alt="">
+      <img id="wheel2" src="img/pinkWheel.png"alt="">
+
     </div>
     <div class="thrower">
       <ul>
@@ -28,8 +39,7 @@
       </ul>
 
     </div>
-    <div class="targetDrop">
-
-    </div>
+    <div class="targetDrop"></div>
+    <div class="targetDrop2"></div>
   </body>
 </html>
