--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <title>Neon Wizard</title>
   </head>
   <body>
+    <div class="start">
+      <h3>Instructions: Use the arrow keys to move and spacebar to shoot fireballs at the robots</h3>
+      <button type="button" name="button">START</button>
+      <img src="img/black.png" alt="">
+    </div>
+    <div class="title">
+      <img src="img/logo.png" alt="">
+    </div>
+
     <div class="wrapper" id="wrapper">
       <div class="hand" id="hand">
         <ul>
