--- a/index.html
+++ b/index.html
@@ -13,42 +13,43 @@
   </head>
   <body>
     <div class="start">
-      <h3>Instructions: Use the arrow keys to move and spacebar to shoot fireballs at the robots</h3>
-      <button type="button" name="button">START</button>
-      <img src="img/black.png" alt="">
-    </div>
-    <div class="title">
-      <img src="img/logo.png" alt="">
-    </div>
-
-    <div class="wrapper" id="wrapper">
-      <div class="hand" id="hand">
-        <ul>
-          <li class="projectile" id="0"><img src="img/fireball.png" alt=""></li>
-        </ul>
+      <div class="start-screen">
+        <h3>Instructions: Use the arrow keys to move and spacebar to shoot fireballs at the robots</h3>
+        <button type="button" name="button">START</button>
+        <img src="img/black.png" alt="">
       </div>
-  </div>
-    <div class="targetMove" id="target">
-      <img src="img/body.png" alt="">
-      <img id="leftarm" src="img/straightArm.png" alt="">
-      <img id="rightarm" src="img/straightArm.png"alt="">
-      <img id="wheel" src="img/wheel.png"alt="">
-
+      <div class="title">
+        <img src="img/logo.png" alt="">
+      </div>
     </div>
-    <div class="targetMove" id="target2">
-      <img src="img/pinkMan.png" alt="">
-      <img id="leftarm2" src="img/pinkArm.png" alt="">
-      <img id="rightarm2" src="img/pinkArm.png"alt="">
-      <img id="wheel2" src="img/pinkWheel.png"alt="">
+    <div class="toHide">
+      <div class="wrapper" id="wrapper">
+        <div class="hand" id="hand">
+          <ul>
+            <li class="projectile" id="0"><img src="img/fireball.png" alt=""></li>
+          </ul>
+        </div>
+      </div>
+      <div class="targetMove" id="target">
+        <img src="img/body.png" alt="">
+        <img id="leftarm" src="img/straightArm.png" alt="">
+        <img id="rightarm" src="img/straightArm.png"alt="">
+        <img id="wheel" src="img/wheel.png"alt="">
+      </div>
+      <div class="targetMove" id="target2">
+        <img src="img/pinkMan.png" alt="">
+        <img id="leftarm2" src="img/pinkArm.png" alt="">
+        <img id="rightarm2" src="img/pinkArm.png"alt="">
+        <img id="wheel2" src="img/pinkWheel.png"alt="">
+      </div>
+      <div class="thrower">
+        <ul>
 
+        </ul>
+
+      </div>
+      <div class="targetDrop"></div>
+      <div class="targetDrop2"></div>
     </div>
-    <div class="thrower">
-      <ul>
-
-      </ul>
-
-    </div>
-    <div class="targetDrop"></div>
-    <div class="targetDrop2"></div>
   </body>
 </html>
